tests/fixtures/negatives-and-edges/syntax-error/base.ts
// Intentional syntax error
export function broken( { 
  return 42;
}

